--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -3,10 +3,36 @@
   <head>
     <meta charset="utf-8" />
     <title>Fancify Shamcify</title>
-    
+    <style>
+        fieldset{
+            border: 1px solid #ccc;
+            padding: 10px;
+            margin-bottom: 10px;
+        }
+    </style> 
   </head>
   <body>
     <h1>Fancify my Text</h1>
-    
+
+    <form>
+        <fieldset>
+            <legend>Text</legend>
+            <textarea id=" inputText" rows="4" cols="30"></textarea>
+        </fieldset>
+        <fieldset>
+            <legend>Fancify</legend>
+            <label>
+                <input type="radio" name="fancifyType" value="fancyShmancy">
+                FancyShmancy
+            </label>
+            <label>
+                <input type="radio" name="fancifyType" value="boringBetty">
+                BoringBetty
+            </label>
+            <button type="button" onclick="increaseTextSize()">Bigger!</button>
+            <button type="button" onclick="capitalizeAndMoo()">Moo</button>
+        </fieldset>
+    </form>
+    <script src="fancifymytext.js"></script>
   </body>
 </html>
