--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -11,28 +11,30 @@
         }
     </style> 
   </head>
+
   <body>
     <h1>Fancify my Text</h1>
-
-    <form>
         <fieldset>
             <legend>Text</legend>
-            <textarea id=" inputText" rows="4" cols="30"></textarea>
+            <textarea id="inputText" rows="4" cols="30"></textarea>
         </fieldset>
+
         <fieldset>
             <legend>Fancify</legend>
+            <button onclick="increaseText()">Bigger!</button>
             <label>
-                <input type="radio" name="fancifyType" value="fancyShmancy">
+                <input id="fancyRadio" type="radio" name="fancifyType" value="fancyShmancy" 
+                onchange="changeStyle()"/>
                 FancyShmancy
             </label>
+
             <label>
-                <input type="radio" name="fancifyType" value="boringBetty">
+                <input id="fancyRadio" type="radio" name="fancifyType" value="boringBetty"
+                onchange="changeStyle()"/>
                 BoringBetty
             </label>
-            <button type="button" onclick="increaseTextSize()">Bigger!</button>
-            <button type="button" onclick="capitalizeAndMoo()">Moo</button>
+            <button type="button" onclick="upperAndMoo()">Moo</button>
         </fieldset>
-    </form>
     <script src="fancifymytext.js"></script>
   </body>
 </html>
