--- a/fancifymytext.html
+++ b/fancifymytext.html
@@ -21,7 +21,7 @@
 
         <fieldset>
             <legend>Fancify</legend>
-            <button onclick="increaseText()">Bigger!</button>
+            <button type="button" onclick="increaseText()">Bigger!</button>
             <label>
                 <input id="fancyRadio" type="radio" name="fancifyType" value="fancyShmancy" 
                 onchange="changeStyle()"/>
@@ -33,7 +33,7 @@
                 onchange="changeStyle()"/>
                 BoringBetty
             </label>
-            <button type="button" onclick="upperAndMoo()">Moo</button>
+            <button type="button" id="upperAndMoo">Moo</button>
         </fieldset>
     <script src="fancifymytext.js"></script>
   </body>
